--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "speakhtml",
+  "name": "@acrossthecloud/speakhtml",
   "version": "0.7.0",
   "description": "for converting html to ssml",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc"
   },
+  "keywords": ["html", "ssml"],
+  "files": ["dist/**/*"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/matthewberryman/speakHTML.git"
@@ -22,7 +24,6 @@
   "devDependencies": {
     "@types/jsdom": "^16.2.13",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3",
-    "webpack-cli": "^4.8.0"
+    "typescript": "^4.4.3"
   }
 }
